--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         </div>
         <div class="myimage">
-            <img src="images/pf.jpeg" alt="Profile Picture">
+            <img src=".images/pf.jpeg" alt="Profile Picture">
         </div>
 
     </section>
@@ -67,7 +67,7 @@
         <h1>My Projects</h1>
         <div class="projects-container">
             <div class="project-card">
-                <img src="images/home2.png" alt="">
+                <img src=".images/home2.png" alt="">
                 <h3>Wood Working Project</h3>
                 <p> A project showcasing intricate woodwork designs and craftsmanship.</p>
                 <span>HTML</span>
@@ -77,7 +77,7 @@
                 <a href="https://awadahmad251.github.io/woodwork-website/" target="_blank">View Project</a>
             </div>
             <div class="project-card">
-                <img src="images/home3.png" alt="">
+                <img src=".images/home3.png" alt="">
                 <h3>My Portfolio</h3>
                 <p> A project demonstrating a responsive portfolio layout.</p>
                 <span>HTML</span>
@@ -88,7 +88,7 @@
 
             </div>
             <div class="project-card">
-                <img src="images/home1.png" alt="">
+                <img src=".images/home1.png" alt="">
                 <h3>Personal-shape</h3>
                 <p>A showcase of my work and skills as a web developer.</p>
                 <span>HTML</span>
@@ -125,13 +125,14 @@
         </div>
         <div class="footer-socials">
             <a href="https://github.com/awadahmad251" target="_blank"><img src="./images/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/in/awad-ahmad-ab1406313" target="_blank"><img src="images/linkedin.jpeg"
+            <a href="https://www.linkedin.com/in/awad-ahmad-ab1406313" target="_blank"><img src=".images/linkedin.jpeg"
                     alt="LinkedIn"></a>
-            <a href="https://www.facebook.com/share/19gVaxA64K/" target="_blank"><img src="images/facebook.jpg"
+            <a href="https://www.facebook.com/share/19gVaxA64K/" target="_blank"><img src=".images/facebook.jpg"
                     alt="Facebook"></a>
         </div>
     </footer>
     <script src="javascript.js"></script>
 </body>
+
 
 </html>
