--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
         </div>
         <div class="footer-socials">
             <a href="https://github.com/awadahmad251" target="_blank"><img src="./images/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/in/awad-ahmad-ab1406313" target="_blank"><img src=".images/linkedin.jpeg"
+            <a href="https://www.linkedin.com/in/awad-ahmad-ab1406313" target="_blank"><img src="./images/linkedin.jpeg"
                     alt="LinkedIn"></a>
-            <a href="https://www.facebook.com/share/19gVaxA64K/" target="_blank"><img src=".images/facebook.jpg"
+            <a href="https://www.facebook.com/share/19gVaxA64K/" target="_blank"><img src="./images/facebook.jpg"
                     alt="Facebook"></a>
         </div>
     </footer>
@@ -136,4 +136,5 @@
 
 
 </html>
+
 
